--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:cardview-v7:25.2.0'
     compile 'com.android.support:support-core-ui:25.2.0'
-
+    compile 'com.android.support:design:25.2.0'
     // Tab bar
     compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
     // Optional: see how to use the utility.
