--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,8 @@ dependencies {
     // Glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
 
+    // PhotoView
+    compile 'com.github.chrisbanes:PhotoView:1.3.1'
+
     testCompile 'junit:junit:4.12'
 }
